--- a/avaliacoes/templates/index.html
+++ b/avaliacoes/templates/index.html
@@ -2,17 +2,11 @@
 
 {% block conteudo %}
             <div class="col-sm-12" align="center">
-                       <h1>Calculo de IMC</h1><br/><br/>
+                       <h1>Cálculo de IMC</h1><br/><br/>
 
-        {% if user.is_authenticated %}
-        <br/>
-        <a href="/areaCalculoIMC/">Painel do Cliente </a>
-        <br/><br/>
-        <a href="/fazerLogoff/">Clique para Sair </a>
-        <br/>
-        {% else %}
+        
         <a href="/cadastroUsuario/">Cadastre-se<a/><br/><br/>
-        {% endif %}
+        
 
         <br/>
         <form action="/login/" method="POST">
