Alteracoes avaliacao.html

--- a/avaliacoes/templates/avaliacao.html
+++ b/avaliacoes/templates/avaliacao.html
@@ -7,7 +7,13 @@
 
         <form action="/salvar/" method="POST">
         {% csrf_token %}
-        {{ form.as_p }} <br/>
+        {{ form.nome.label }} <br/> {{ form.nome }} <br/>
+        {{ form.sexo.label }} <br/> {{ form.sexo }} <br/>
+        {{ form.idade.label }} <br/> {{ form.idade }} <br/>
+        {{ form.peso.label }} <br/> {{ form.peso }} <br/>
+        {{ form.altura.label }} <br/> {{ form.altura }} <br/>
+        {{ form.resultado.label }} <br/> {{ form.resultado }} <br/>
+
         <input type="submit" value="Calcular" class="btn btn-success" />
         </form>
 
