--- a/avaliacoes/templates/base.html
+++ b/avaliacoes/templates/base.html
@@ -10,9 +10,7 @@
     <!-- CSS -->
     <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen"
-     href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
+    <link href="{{ STATIC_URL }}css/bootstrap-combined.min.css" rel="stylesheet">
     <!--FIM CSS -->  
 
 
@@ -30,16 +28,6 @@
     <!-- JavaScript -->
     <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-datetimepicker.min.js"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-datetimepicker.pt-BR.js"></script>
-
-    <script type="text/javascript">
-      $('.datetimepicker').datetimepicker({
-        format: 'dd/MM/yyyy',
-        language: 'pt-BR'
-      });
-    </script>
-    
 
     <!-- FIM JavaScript -->
     
