--- a/avaliacoes/templates/base.html
+++ b/avaliacoes/templates/base.html
@@ -8,9 +8,8 @@
     <title>Projeto IMC</title>
 
     <!-- CSS -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap-combined.min.css" rel="stylesheet">
     <!--FIM CSS -->  
 
 
