--- a/avaliacoes/templates/base.html
+++ b/avaliacoes/templates/base.html
@@ -8,8 +8,9 @@
     <title>Projeto IMC</title>
 
     <!-- CSS -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-combined.min.css" rel="stylesheet">
+
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet">
     <!--FIM CSS -->  
 
 
