--- a/avaliacoes/templates/avaliacao.html
+++ b/avaliacoes/templates/avaliacao.html
@@ -18,8 +18,8 @@
 
         {% if resultado != None %}
           <div class="alert alert-success alert-dismissible" role="alert" >
-           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
-             <span class="sr-only">Close</span>
+           <button type="button" class="close" data-dismiss="alert">
+             <span class="sr-only"></span>
            </button>
            <strong>{{ resultado }} {{ calculo|floatformat:2 }}</strong>
           </div>
@@ -43,7 +43,7 @@
                <td>{{ avaliacao.peso }}</td>
                <td>{{ avaliacao.altura }}</td>
                <td>{{ avaliacao.resultado|floatformat:2 }}</td>
-               <td><a href="/apagar/{{ avaliacao.pk }}"><span class="glyphicon glyphicon-remove"></span></a>
+               <td><a href="/apagar/{{ avaliacao.pk }}"><strong>X</strong></a>
                </td>
              </tr>
            {% endfor %}  
