--- a/avaliacoes/templates/base.html
+++ b/avaliacoes/templates/base.html
@@ -26,8 +26,8 @@
       </div>
 
     <!-- JavaScript -->
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 
     <!-- FIM JavaScript -->
     
