--- a/avaliacoes/templates/avaliacao.html
+++ b/avaliacoes/templates/avaliacao.html
@@ -4,7 +4,7 @@
 
  {% load i18n %}
         
-        <h1>{% trans "Avaliacao" %}</h1> <a href="/fazerLogoff/"><strong>{% trans "Clique para Sair" %}</strong></a><br/><br/>
+        <h1>{% trans "Avaliação" %}</h1> <a href="/fazerLogoff/"><strong>{% trans "Clique para Sair" %}</strong></a><br/><br/>
         <br/>
         <form action="/calcular/" method="POST">
           {% csrf_token %}
